--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install
-        run: yarn install
+        run: |
+          yarn install
+          yarn add textlint-scripts --dev
+          yarn upgrade
       - name: Test
         run: yarn test
