--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "alex"
   ],
   "devDependencies": {
-    "textlint-scripts": "^12.1.1"
+    "textlint-scripts": "^13.4.0"
   },
   "dependencies": {
-    "alex": "^9.1.1",
+    "alex": "^11.0.1",
     "textlint-rule-helper": "^2.3.0"
+  },
+  "resolutions": {
+    "wrap-ansi": "^7.0.0"
   }
 }
