--- a/package.json
+++ b/package.json
@@ -38,7 +38,5 @@
     "alex": "^11.0.1",
     "textlint-rule-helper": "^2.3.0"
   },
-  "resolutions": {
-    "wrap-ansi": "^7.0.0"
-  }
+  "packageManager": "npm@10.1.0"
 }
